fixed header ruler overlapping with svg

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
 body>#svg {
     fill: var(--tertiary-color);
     position: fixed;
-    top: -5px;
+    top: -2vw;
     z-index: -99;
     transform: rotate(180deg);
 }
